--- a/assets/css/scss/_media.scss
+++ b/assets/css/scss/_media.scss
@@ -43,7 +43,7 @@
     text-align: center;
     max-width: 480px;
     margin: 10px auto auto;
-    img {
+    .cover-author-image img {
       width: 100px;
       height: 100px;
       border-radius: 100%;
